fix(a11y): header hierarchy on Hours page

--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -24,6 +24,7 @@
     {% endif %}
 
     <div class="about-us-content">
+        <h2 class="sr-only">Open Hours Table</h2>
         <table class="table table-striped">
             <thead>
                 <tr>
