--- a/libraries/libraries/static/scss/bootstrap/_forms.scss
+++ b/libraries/libraries/static/scss/bootstrap/_forms.scss
@@ -1,6 +1,7 @@
 //
 // Forms
 // --------------------------------------------------
+@use 'sass:color';
 @use 'sass:math';
 
 // Normalize non-controls
@@ -468,7 +469,7 @@ input[type='checkbox'] {
     display: block; // account for any element using help-block
     margin-top: 5px;
     margin-bottom: 10px;
-    color: lighten($text-color, 25%); // lighten the text some for contrast
+    color: color.adjust($text-color, $lightness: 25%); // lighten the text some for contrast
 }
 
 
