--- a/libraries/libraries/static/scss/bootstrap/_jumbotron.scss
+++ b/libraries/libraries/static/scss/bootstrap/_jumbotron.scss
@@ -1,7 +1,7 @@
 //
 // Jumbotron
 // --------------------------------------------------
-
+@use 'sass:color';
 
 .jumbotron {
     padding-top: $jumbotron-padding;
@@ -22,7 +22,7 @@
     }
 
     > hr {
-        border-top-color: darken($jumbotron-bg, 10%);
+        border-top-color: color.adjust($jumbotron-bg, $lightness: -10%);
     }
 
     .container &,
