--- a/libraries/libraries/static/scss/bootstrap/_theme.scss
+++ b/libraries/libraries/static/scss/bootstrap/_theme.scss
@@ -44,21 +44,21 @@
 
 // Mixin for generating new styles
 @mixin btn-styles($btn-color: #555) {
-    @include gradient-vertical($start-color: $btn-color, $end-color: darken($btn-color, 12%));
+    @include gradient-vertical($start-color: $btn-color, $end-color: color.adjust($btn-color, $lightness: -12%));
     @include reset-filter; // Disable gradients for IE9 because filter bleeds through rounded corners; see https://github.com/twbs/bootstrap/issues/10620
     background-repeat: repeat-x;
-    border-color: darken($btn-color, 14%);
+    border-color: color.adjust($btn-color, $lightness: -14%);
 
     &:hover,
     &:focus {
-        background-color: darken($btn-color, 12%);
+        background-color: color.adjust($btn-color, $lightness: -12%);
         background-position: 0 -15px;
     }
 
     &:active,
     &.active {
-        background-color: darken($btn-color, 12%);
-        border-color: darken($btn-color, 14%);
+        background-color: color.adjust($btn-color, $lightness: -12%);
+        border-color: color.adjust($btn-color, $lightness: -14%);
     }
 
     &.disabled,
@@ -70,7 +70,7 @@
         &.focus,
         &:active,
         &.active {
-            background-color: darken($btn-color, 12%);
+            background-color: color.adjust($btn-color, $lightness: -12%);
             background-image: none;
         }
     }
@@ -155,7 +155,7 @@
 
     .navbar-nav > .open > a,
     .navbar-nav > .active > a {
-        @include gradient-vertical($start-color: $navbar-inverse-link-active-bg, $end-color: lighten($navbar-inverse-link-active-bg, 2.5%));
+        @include gradient-vertical($start-color: $navbar-inverse-link-active-bg, $end-color: color.adjust($navbar-inverse-link-active-bg, $lightness: 2.5%));
         @include box-shadow(inset 0 3px 9px rgba(0,0,0,.25));
     }
 
@@ -179,7 +179,7 @@
         &:hover,
         &:focus {
             color: #fff;
-            @include gradient-vertical($start-color: $dropdown-link-active-bg, $end-color: darken($dropdown-link-active-bg, 5%));
+            @include gradient-vertical($start-color: $dropdown-link-active-bg, $end-color: color.adjust($dropdown-link-active-bg, $lightness: -5%));
         }
     }
 }
@@ -198,8 +198,8 @@
 
 // Mixin for generating new styles
 @mixin alert-styles($color) {
-    @include gradient-vertical($start-color: $color, $end-color: darken($color, 7.5%));
-    border-color: darken($color, 15%);
+    @include gradient-vertical($start-color: $color, $end-color: color.adjust($color, $lightness: -7.5%));
+    border-color: color.adjust($color, $lightness: -15%);
 }
 
 // Apply the mixin to the alerts
@@ -215,11 +215,11 @@
 
 // Give the progress background some depth
 .progress {
-    @include gradient-vertical($start-color: darken($progress-bg, 4%), $end-color: $progress-bg); }
+    @include gradient-vertical($start-color: color.adjust($progress-bg, $lightness: -4%), $end-color: $progress-bg); }
 
 // Mixin for generating new styles
 @mixin progress-bar-styles($color) {
-    @include gradient-vertical($start-color: $color, $end-color: darken($color, 10%));
+    @include gradient-vertical($start-color: $color, $end-color: color.adjust($color, $lightness: -10%));
 }
 
 // Apply the mixin to the progress bars
@@ -248,9 +248,9 @@
 .list-group-item.active,
 .list-group-item.active:hover,
 .list-group-item.active:focus {
-    text-shadow: 0 -1px 0 darken($list-group-active-bg, 10%);
-    @include gradient-vertical($start-color: $list-group-active-bg, $end-color: darken($list-group-active-bg, 7.5%));
-    border-color: darken($list-group-active-border, 7.5%);
+    text-shadow: 0 -1px 0 color.adjust($list-group-active-bg, $lightness: -10%);
+    @include gradient-vertical($start-color: $list-group-active-bg, $end-color: color.adjust($list-group-active-bg, $lightness: -7.5%));
+    border-color: color.adjust($list-group-active-border, $lightness: -7.5%);
 
     .badge {
         text-shadow: none;
@@ -269,7 +269,7 @@
 
 // Mixin for generating new styles
 @mixin panel-heading-styles($color) {
-    @include gradient-vertical($start-color: $color, $end-color: darken($color, 5%));
+    @include gradient-vertical($start-color: $color, $end-color: color.adjust($color, $lightness: -5%));
 }
 
 // Apply the mixin to the panel headings only
@@ -286,8 +286,8 @@
 // --------------------------------------------------
 
 .well {
-    @include gradient-vertical($start-color: darken($well-bg, 5%), $end-color: $well-bg);
-    border-color: darken($well-bg, 10%);
+    @include gradient-vertical($start-color: color.adjust($well-bg, $lightness: -5%), $end-color: $well-bg);
+    border-color: color.adjust($well-bg, $lightness: -10%);
     $shadow: inset 0 1px 3px rgba(0, 0, 0, .05), 0 1px 0 rgba(255, 255, 255, .1);
     @include box-shadow($shadow);
 }
