--- a/libraries/libraries/templates/components/footer/footer.html
+++ b/libraries/libraries/templates/components/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer js-footer">
-	<!-- purely for header hierarchy reasons -->
+	{% comment %} for header hierarchy reasons {% endcomment %}
 	<h3 class="sr-only">Footer</h3>
 	<div class="wrapper">
 		<ul class="footer__sections">
