--- a/libraries/categories/templates/categories/blocks/card.html
+++ b/libraries/categories/templates/categories/blocks/card.html
@@ -1,9 +1,9 @@
 {% load wagtailcore_tags wagtailimages_tags %}
-{% comment %} based on Portal's "card" template {% endcomment %}
+{# based on Portal's "card" template #}
 <section class="card">
     <h3 class="card__header">
         <a class="card__link" href="{{ value.link.url }}">
-            {% image value.thumbnail fill-600x400 class="card__thumb" %}
+            {% image value.thumbnail fill-600x400 alt="" class="card__thumb" %}
             <span class="card__title">{{ value.link.text|truncatewords:20 }}</span>
         </a>
     </h3>
