--- a/libraries/blog/templates/blog/blog-sidebar-item.html
+++ b/libraries/blog/templates/blog/blog-sidebar-item.html
@@ -7,12 +7,12 @@
 		<div
 			class="blog-sidebar-item__image"
 			style="background-image: url('{{ img.url }}');"
-		  title="{{ post.title }}"
+			title="{{ post.title }}"
 		></div>
-		<h4 class="blog-sidebar-item__title">
+		<p class="blog-sidebar-item__title">
 			<span class="blog-sidebar-item__title-text">
 				{{ post.title }}
 			</span>
-		</h4>
+		</p>
 	</a>
 </li>
