--- a/libraries/libraries/static/scss/bootstrap/_glyphicons.scss
+++ b/libraries/libraries/static/scss/bootstrap/_glyphicons.scss
@@ -11,12 +11,14 @@
     // Import the fonts
     @font-face {
         font-family: 'Glyphicons Halflings';
-        src: url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.eot'), '#{$icon-font-path}#{$icon-font-name}.eot'));
-        src: url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.eot?#iefix'), '#{$icon-font-path}#{$icon-font-name}.eot?#iefix')) format('embedded-opentype'),
-            url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.woff2'), '#{$icon-font-path}#{$icon-font-name}.woff2')) format('woff2'),
-            url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.woff'), '#{$icon-font-path}#{$icon-font-name}.woff')) format('woff'),
-            url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.ttf'), '#{$icon-font-path}#{$icon-font-name}.ttf')) format('truetype'),
-            url(if($bootstrap-sass-asset-helper, twbs-font-path('#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}'), '#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}')) format('svg');
+        // ! VS Code does not recognize CSS if() syntax yet (2026-02)
+        // ! https: //github.com/microsoft/vscode-css-languageservice/issues/466
+        src: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-font-path('#{$icon-font-path}#{$icon-font-name}.eot'); else: '#{$icon-font-path}#{$icon-font-name}.eot'));
+        src: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-font-path('#{$icon-font-path}#{$icon-font-name}.eot?#iefix'); else: '#{$icon-font-path}#{$icon-font-name}.eot?#iefix')) format('embedded-opentype'),
+            url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-font-path('#{$icon-font-path}#{$icon-font-name}.woff2'); else: '#{$icon-font-path}#{$icon-font-name}.woff2')) format('woff2'),
+            url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-font-path('#{$icon-font-path}#{$icon-font-name}.woff'); else: '#{$icon-font-path}#{$icon-font-name}.woff')) format('woff'),
+            url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-font-path('#{$icon-font-path}#{$icon-font-name}.ttf'); else: '#{$icon-font-path}#{$icon-font-name}.ttf')) format('truetype'),
+            url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-font-path('#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}'); else: '#{$icon-font-path}#{$icon-font-name}.svg##{$icon-font-svg-id}')) format('svg');
     }
 }
 
