--- a/libraries/libraries/static/scss/bootstrap/mixins/_image.scss
+++ b/libraries/libraries/static/scss/bootstrap/mixins/_image.scss
@@ -20,7 +20,9 @@
 // Short retina mixin for setting background-image and -size. Note that the
 // spelling of `min--moz-device-pixel-ratio` is intentional.
 @mixin img-retina($file-1x, $file-2x, $width-1x, $height-1x) {
-    background-image: url(if(variables.$bootstrap-sass-asset-helper, twbs-image-path("#{$file-1x}"), '#{$file-1x}'));
+    // ! VS Code does not recognize CSS if() syntax yet (2026-02)
+    // ! https: //github.com/microsoft/vscode-css-languageservice/issues/466
+    background-image: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-image-path("#{$file-1x}"); else: '#{$file-1x}'));
 
     @media
         only screen and (min-device-pixel-ratio: 2),
@@ -29,7 +31,7 @@
         only screen and (min-device-pixel-ratio: 2),
         only screen and (min-resolution: 192dpi),
         only screen and (min-resolution: 2dppx) {
-        background-image: url(if(variables.$bootstrap-sass-asset-helper, twbs-image-path("#{$file-2x}"), '#{$file-2x}'));
+        background-image: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-image-path("#{$file-2x}"); else: '#{$file-2x}'));
         background-size: $width-1x $height-1x;
     }
 }
