--- a/libraries/libraries/static/scss/bootstrap/mixins/_image.scss
+++ b/libraries/libraries/static/scss/bootstrap/mixins/_image.scss
@@ -22,7 +22,7 @@
 @mixin img-retina($file-1x, $file-2x, $width-1x, $height-1x) {
     // ! VS Code does not recognize CSS if() syntax yet (2026-02)
     // ! https: //github.com/microsoft/vscode-css-languageservice/issues/466
-    background-image: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-image-path("#{$file-1x}"); else: '#{$file-1x}'));
+    background-image: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-image-path('#{$file-1x}'); else: '#{$file-1x}'));
 
     @media
         only screen and (min-device-pixel-ratio: 2),
@@ -31,7 +31,7 @@
         only screen and (min-device-pixel-ratio: 2),
         only screen and (min-resolution: 192dpi),
         only screen and (min-resolution: 2dppx) {
-        background-image: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-image-path("#{$file-2x}"); else: '#{$file-2x}'));
+        background-image: url(if(sass(variables.$bootstrap-sass-asset-helper): twbs-image-path('#{$file-2x}'); else: '#{$file-2x}'));
         background-size: $width-1x $height-1x;
     }
 }
